--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/file-chooser": "^4.20.0",
     "@ionic-native/file-path": "^4.20.0",
     "@ionic-native/http": "^4.20.0",
+    "@ionic-native/image-picker": "^4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "2.2.0",
@@ -52,6 +53,7 @@
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "^2.3.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "typescript": "2.7.1"
   },
@@ -73,7 +75,10 @@
       "cordova-plugin-file": {},
       "com-badrit-base64": {},
       "cordova-plugin-filechooser": {},
-      "cordova-plugin-filepath": {}
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "your usage message"
+      }
     },
     "platforms": [
       "android"
