--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "2.2.0",
+    "@types/jquery": "^3.5.4",
     "cordova-res": "^0.15.1",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
