--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ionic-native/base64": "^4.20.0",
     "@ionic-native/camera": "^4.20.0",
     "@ionic-native/core": "4.20.0",
+    "@ionic-native/email-composer": "^4.20.0",
     "@ionic-native/file": "^4.20.0",
     "@ionic-native/file-chooser": "^4.20.0",
     "@ionic-native/file-path": "^4.20.0",
@@ -43,10 +44,11 @@
   "devDependencies": {
     "@ionic/app-scripts": "3.2.3",
     "com-badrit-base64": "^0.2.0",
-    "cordova-android": "^9.0.0",
+    "cordova-android": "^8.0.0",
     "cordova-plugin-advanced-http": "^3.0.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-email-composer": "^0.9.2",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-filechooser": "^1.2.0",
     "cordova-plugin-filepath": "^1.5.8",
@@ -79,7 +81,8 @@
       "cordova-plugin-filepath": {},
       "cordova-plugin-telerik-imagepicker": {
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "your usage message"
-      }
+      },
+      "cordova-plugin-email-composer": {}
     },
     "platforms": [
       "android"
